fix: differentiate src and include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,10 @@ include(GNUInstallDirs)
 set(CMAKE_CXX_STANDARD 20)
 
 add_library(${PROJECT_NAME} SHARED
-        src/milch.cpp
-        src/milch.h
+        src/window.cpp
+        include/window.hpp
         src/color.cpp
-        src/color.hpp)
+        include/color.hpp)
 add_executable(${PROJECT_NAME}_test EXCLUDE_FROM_ALL examples/simple_window.cpp)
 target_link_libraries(${PROJECT_NAME}_test milch)
 target_link_libraries(${PROJECT_NAME} "-lX11")
