fix: reorganize cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,17 +2,18 @@ cmake_minimum_required(VERSION 3.9)
 project(milch VERSION 1.0.1 DESCRIPTION "a simple gui lib for c++")
 include(GNUInstallDirs)
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
+
 
 add_library(${PROJECT_NAME} SHARED
         src/window.cpp
-        include/window.hpp
         src/color.cpp
-        include/color.hpp include/error.hpp)
-add_executable(${PROJECT_NAME}_test EXCLUDE_FROM_ALL examples/simple_window.cpp)
-target_link_libraries(${PROJECT_NAME}_test milch)
+)
+
+include_directories(${PROJECT_NAME} include/)
+
 target_link_libraries(${PROJECT_NAME} "-lX11")
-target_include_directories(${PROJECT_NAME} PRIVATE include)
-target_include_directories(${PROJECT_NAME}  PRIVATE src)
+
 set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
 set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR})
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER include/milch/milch.h)
