--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # cmake
-cmake-build-debug/
-cmake-build-release/
+build/
 
 # IDE
 .idea/
+.cache/
 
 # Devlopment stuff
 test/
+compile_commands.json
